Status update in readme

--- a/hcorde2_wdwora2/README
+++ b/hcorde2_wdwora2/README
@@ -26,4 +26,4 @@ Example:
 -------------------------------------------------------------------------
 --->TODO<----------------------------------------------------------------
 
-*Fill in at end*
+Take verb usage into scoring account, stats grabbed from training but not used for tests
