--- a/hcorde2_wdwora2/README
+++ b/hcorde2_wdwora2/README
@@ -8,7 +8,7 @@ Walter Dworak wdwora2@uic.edu
 The following packages are required and need to be installed on your system. For installation instructions for there packages please consult the python library installation procedure for your operating system.
 
 Package Requirements:
-        python
+        python3 
         python-nltk
         nltk-data
         pyenchant
@@ -42,4 +42,5 @@ Checking error numbers after that for the 'low', 'medium' and 'high' levels with
 -------------------------------------------------------------------------
 --->TODO<----------------------------------------------------------------
 
-Take verb usage into scoring account, stats grabbed from training but not used for tests
+Parts 2A, 2B, 1D
+Verb Tense Checking can be improved
