--- a/hcorde2_wdwora2/README
+++ b/hcorde2_wdwora2/README
@@ -15,35 +15,10 @@ Package Requirements:
         pyenchant
 
 
-After extracting the archived files enter the project directory. Please also follow the README file in the stanford directory for addtional instructions. After placing the intended essay files in the test directory, navigate to the projects root root directory and run the "run.py" script file with your python interpreter. 
+After extracting the archived files enter the project directory. Please also follow the README file in the "stanford" directory for addtional instructions. After placing the intended essay files in the test directory, navigate to the projects root root directory and run the "run.py" script file with your python interpreter. 
 
 Example:
         "python run.py"
 
 If you get a java class error, or similar, then you must set the 'JAVAHOME' enviroment variable for your OS. Please consult the Java docs for your OS for instructions. A JVM out of memory error may be thrown by the Stanford parser on essays with very long sentences, this is unavoidable and their is no way around it without coding for those cases.
 
--------------------------------------------------------------------------
---->TECHNIQUE<-----------------------------------------------------------
-
-Quoted from the sourcecode:
-
-## Illegal Combinations: http://grammar.ccc.commnet.edu/grammar/sv_agr.htm
-## Basic Principle: Singular subjects need singular verbs; plural subjects need plural verbs.
-## My brother is a nutritionist. My sisters are mathematicians.
-## So we are counting errors for:
-##  VBP / VBZ followed by NNS / NNPS
-## We can't check for verb plural using the tags existing.
-
-# attempt to do stats on the verb tenses, mainly check if there is a main verb and see if all verbs in a sentence are the same tense
-# a sentence must have a least 1 VB* for it to count as having a main verb
-# verb of different tenses will trigger an error, a mix including VB is not being counted as an error due toa noticed pattern in the tagging
-# split loops for logic separation
-
-# No verb then no main verb, no main verb error
-
-Checking error numbers after that for the 'low', 'medium' and 'high' levels with mins and maxes creates ranges in which the grading works based on the training documents. 
-
--------------------------------------------------------------------------
---->TODO<----------------------------------------------------------------
-
-Parts 2A 2B
